<resources>
    <string name="app_name">qwooda2_project_2</string>
    <string name="list_view">listView</string>
    <string name="Joker">Joker</string>
    <string name="year">2019</string>
    <string name="todo">TODO</string>
    <string name="Glass">Glass</string>
    <string name="Sonic">Sonic</string>
    <string name="Spiderman">Spiderman</string>
    <string name="WonderWoman">WonderWoman</string>
    <string name="Cats">Cats</string>
</resources>